fix: improve Spanish translations for play actions
- "Reproducir siguiente" → "Reproducir a continuación"
- "Reproducción aleatoria" → "Reproducir aleatoriamente"
- "Reproducir todo" → "Reproducir"

--- a/src/locales/es.json
+++ b/src/locales/es.json
@@ -45,8 +45,8 @@
   "sidebar.songCount.one": "{{count}} canción",
   "sidebar.songCount.other": "{{count}} canciones",
   "playlist.type": "PLAYLIST",
-  "playlist.playAll": "Reproducir todo",
-  "playlist.shufflePlay": "Reproducción aleatoria",
+  "playlist.playAll": "Reproducir",
+  "playlist.shufflePlay": "Reproducir aleatoriamente",
   "playlist.exportCsv": "Exportar como CSV",
   "playlist.changeCover": "Cambiar portada",
   "playlist.rename": "Renombrar playlist",
@@ -109,8 +109,8 @@
   "lyrics.failed": "Error al cargar la letra",
   "lyrics.toggleLyrics": "Mostrar/ocultar letra",
   "context.play": "Reproducir",
-  "context.playAll": "Reproducir todo",
-  "context.playNext": "Reproducir siguiente",
+  "context.playAll": "Reproducir",
+  "context.playNext": "Reproducir a continuación",
   "context.playAudio": "Reproducir como audio",
   "context.playVideo": "Reproducir video",
   "context.addToQueue": "Agregar a la cola",
@@ -132,7 +132,7 @@
   "context.changeCover": "Cambiar portada",
   "context.saveToLibrary": "Guardar como playlist",
   "context.removeFromLibrary": "Quitar de la biblioteca",
-  "context.shufflePlay": "Reproducción aleatoria",
+  "context.shufflePlay": "Reproducir aleatoriamente",
   "settings.title": "Ajustes",
   "settings.account": "Cuenta",
   "settings.accountDesc": "Inicia sesión para sincronizar tus playlists, canciones favoritas y ajustes entre dispositivos.",
@@ -274,8 +274,8 @@
   "toast.alreadyInPlaylist": "Ya está en \"{{name}}\"",
   "toast.addedToQueue": "Agregada a la cola",
   "toast.alreadyInQueue": "Ya está en la cola",
-  "toast.movedToPlayNext": "Movida para reproducir siguiente",
-  "toast.addedToPlayNext": "Agregada para reproducir siguiente",
+  "toast.movedToPlayNext": "Movida a reproducir a continuación",
+  "toast.addedToPlayNext": "Agregada a reproducir a continuación",
   "toast.createdPlaylist": "Playlist \"{{name}}\" creada",
   "toast.renamedTo": "Renombrada a \"{{name}}\"",
   "toast.deletedPlaylist": "Playlist \"{{name}}\" eliminada",
